Fixed title spacing issue

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ a.social:visited, a.social:link, i {
 	white-space: nowrap;
 	animation: expand 1s cubic-bezier(0.94, 0.06, 0.31, 0.95) 1s,expand2 1s cubic-bezier(.14,.66,.22,.92) 2.5s;
 	animation-fill-mode: forwards;
-	letter-spacing: -20px;
+	letter-spacing: -2vw;
 	color: lawngreen;
 	text-shadow: 0px 0px 1vw black;
 }
